# expense_tracker

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml
configs/: config.example.toml  secret.example.toml
src/tracker/application/commands/auth/: login.py  refresh_token.py
src/tracker/application/commands/person/: change_username.py  create.py
src/tracker/application/dto/: base.py
src/tracker/application/errors/: auth.py  base.py
src/tracker/application/interfaces/: interactor.py  transaction_manager.py
src/tracker/application/interfaces/readers/: person.py
src/tracker/application/interfaces/repositories/: person.py
src/tracker/application/interfaces/security/: identity_provider.py  jwt_provider.py  password_hasher.py
src/tracker/config/: api.py  config.py  database.py  jwt.py
src/tracker/domain/: base.py
src/tracker/domain/entities/: base.py  category.py  credit_debt.py  debit_debt.py  expense.py  expense_category.py  expense_split.py  income.py  income_category.py  person.py
src/tracker/domain/enums/: __init__.py  budget_source.py  flow_type.py  payment_type.py
src/tracker/domain/errors/: __init__.py  base.py
src/tracker/domain/services/: budget_calculator.py
src/tracker/domain/values/: base.py  budget_line.py  budget_report.py  category_name.py  date_range.py  dough.py  password.py  payment_schedule.py  person_ledger.py  person_name.py
src/tracker/infrastructure/: password_hasher.py
src/tracker/infrastructure/database/: mapper.py  transaction_manager.py
src/tracker/infrastructure/database/errors/: base.py
src/tracker/infrastructure/database/migrations/: env.py  script.py.mako
src/tracker/infrastructure/database/models/: __init__.py  base.py  person.py
src/tracker/infrastructure/security/: identity_provider.py  jwy_provider.py
src/tracker/main/: api.py
src/tracker/main/di/: container.py
src/tracker/presentation/api/: dependencies.py  error_handler.py
tests/unit_tests/domain_tests/entities_tests/: test_base.py  test_credit_debt.py  test_debit_debt.py  test_expense.py  test_expense_category.py  test_expense_split.py  test_income.py  test_income_category.py  test_person.py
tests/unit_tests/domain_tests/service_tests/: test_budget_calculator.py
(+19 files in other folders)
