[project]
name = "expense-tracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "adaptix>=3.0.0b12",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "dishka>=1.9.1",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.10",
]

test = [
    "pyhamcrest>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "test",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no database)",
    "integration: Integration tests (slower, use database)"
]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "src"
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
module = ["hamcrest.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
src = ["src"]
target-version = "py314"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "ANN401",
    "COM812",
    "D",
    "EM101",
    "EM102",
    "TRY003",
]

[tool.ruff.lint.extend-per-file-ignores]  # Исключаем провери в тестах
"tests/**" = [
    "S101"
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
